--- a/.mybashrc
+++ b/.mybashrc
@@ -3,6 +3,19 @@
 #root prompt
 #export PS1='${debian_chroot:+($debian_chroot)}\[\033[01;31m\]\u\[\033[01;37m\]@\[\033[01;32m\]\h\[\033[01;37m\]:\[\033[01;34m\]\w\[\033[01;31m\]$\[\033[00m\] '
 
+# for ubuntu/debian
+#if [ "$color_prompt" = yes ]; then
+#    if [ `whoami` = root ]; then
+#        PS1='${debian_chroot:+($debian_chroot)}\[\033[01;31m\]\u\[\033[01;37m\]@\[\033[01;32m\]\h\[\033[01;37m\]:\[\033[01;34m\]\w\[\033[01;31m\]$\[\033[00m\] '
+#    else
+#        PS1='${debian_chroot:+($debian_chroot)}\[\033[01;36m\]\u\[\033[01;37m\]@\[\033[01;32m\]\h\[\033[01;37m\]\[\033[01;37m\]:\[\033[01;34m\]\w\[\033[01;36m\] \$\[\033[00m\] '
+#    fi
+#     #PS1='${debian_chroot:+($debian_chroot)}\[\033[01;36m\]\u\[\033[01;37m\]@\[\033[01;32m\]\h\[\033[01;37m\]\[\033[01;37m\]:\[\033[01;34m\]\w\[\033[01;36m\] \$\[\033[00m\] '
+#else
+#    PS1='${debian_chroot:+($debian_chroot)}\u@\h:\w\$ '
+#fi
+
+
 #user prompt
 export PS1='${debian_chroot:+($debian_chroot)}\[\033[01;36m\]\u\[\033[01;37m\]@\[\033[01;32m\]\h\[\033[01;37m\]\[\033[01;37m\]:\[\033[01;34m\]\w\[\033[01;36m\] \$\[\033[00m\] '
 
