--- a/.gitconfig
+++ b/.gitconfig
@@ -47,4 +47,7 @@
 #    tool = meld
 [merge]
     tool = vimdiff
-#    tool = meld
+#    tool = meld3
+[mergetool "meld3"]
+        cmd = $HOME/bin/meld3 $BASE $LOCAL $REMOTE $MERGED
+
