update gitweb config

--- a/tools/gitolite-gitweb/gitweb.conf
+++ b/tools/gitolite-gitweb/gitweb.conf
@@ -2,6 +2,7 @@
 # handle gitolite 3 acl in gitweb
 
 # path to git projects (<project>.git)
+#$projectroot = "/var/cache/git";
 $projectroot = "/home/git/repositories";
 
 # directory to use for temp files
@@ -11,22 +12,26 @@ $git_temp = "/tmp";
 #$home_link = $my_uri || "/";
 
 # html text to include at home page
-$home_text = "indextext.html";
+#$home_text = "indextext.html";
 
 # file with project list; by default, simply scan the projectroot dir.
+#$projects_list = $projectroot;
 $projects_list = "/home/git/projects.list";
 
 # stylesheet to use
-#$stylesheet = "/gitweb/gitweb.css";
-$stylesheet = "/gitweb.css";
+#@stylesheets = ("static/gitweb.css");
+#$stylesheet = "/gitweb.css";
+
+# javascript code for gitweb
+#$javascript = "static/gitweb.js";
 
 # logo to use
-#$logo = "/gitweb/git-logo.png";
-$logo = "/git-logo.png";
+#$logo = "static/git-logo.png";
+#$logo = "/git-logo.png";
 
 # the 'favicon'
-#$favicon = "/gitweb/git-favicon.png";
-$favicon = "/git-favicon.png";
+#$favicon = "static/git-favicon.png";
+#$favicon = "/git-favicon.png";
 
 # --------------------------------------------
 # Per-repo authorization based on gitolite ACL
@@ -75,3 +80,6 @@ $export_auth_hook = sub {
     return can_read($repo);
 };
 
+# git-diff-tree(1) options to use for generated patches
+#@diff_opts = ("-M");
+@diff_opts = ();
