--- a/.gitconfig
+++ b/.gitconfig
@@ -13,10 +13,7 @@
     autocrlf = input
     editor = vim
 [alias]
-    subupdate = submodule update --init --recursive
-    subup = submodule update --init --recursive
-    cloner = clone --recursive
-    clr = clone --recursive
+# shortcuts
     cl = clone
     co = checkout
     br = branch
@@ -33,23 +30,40 @@
     pl = pull
     ps = push
     sh = show --color-words
+    df = diff
+    hp = help
+# a common task !!
     psom = push origin master
-    ignore = "!echo >> $GIT_PREFIX/.gitignore"
-    fix = commit --amend
-    amend = commit --amend
-    unstage = reset HEAD --
-    us = reset HEAD --
+# diff and log helpers
     staged = diff --cached
+    dfc = diff --cached
     lg = log --graph
+    lgp = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset%s %C(blue)(%an)%Creset %Cgreen(%cd - %cr)%Creset' --abbrev-commit --date=local
     last = log -1 HEAD
     tip = log -n 1 --abbrev-commit --decorate
+# sudmodules management
+    subupdate = submodule update --init --recursive
+    subup = submodule update --init --recursive
+    cloner = clone --recursive
+    clr = clone --recursive
+# add file to gitignore
+    ignore = "!echo >> $GIT_PREFIX/.gitignore"
+# amend last not pushed commit 
+    fix = commit --amend
+    amend = commit --amend
+# remove files from staging area (files to be committed) 
+    unstage = reset HEAD --
+    us = reset HEAD --
+# discard changes (modified files but not to be committed) 
     unmodify = checkout --
     undo = checkout --
+    discard = checkout --
+    ds = checkout --
     un = checkout --
     um = checkout --
+# git remove manually deleted files
     rd  = !git ls-files -z --deleted | xargs -0 git rm
     cf = cat-file -p
-    lgp = log --graph --pretty=tformat:'%Cred%h%Creset -%C(yellow)%d%Creset%s %C(blue)(%an)%Creset %Cgreen(%cd - %cr)%Creset' --abbrev-commit --date=local
     trackbranch = branch --set-upstream
     pushtrack = push -u 
 [diff]
