add alias for git help

--- a/.gitconfig
+++ b/.gitconfig
@@ -32,6 +32,7 @@
     sh = show --color-words
     df = diff
     hp = help
+    man = help
 # a common task !!
     psom = push origin master
 # diff and log helpers
