update symfony2 gitignore

--- a/tools/symfony2/.gitignore
+++ b/tools/symfony2/.gitignore
@@ -20,20 +20,20 @@ nbproject
 catalog.xml
 *.psd
 *~
-web/bundles/
-web/js/compiled/
-web/css/compiled/
-web/uploads/
-app/config/parameters.yml
-app/bootstrap.php.cache
-app/cache/*
-app/logs/*
-app/phpunit.xml
-app/propel/sql/*
-app/propel/migrations/*
-om
-map
-bin
-build
-vendor
+/web/bundles/
+/web/js/compiled/
+/web/css/compiled/
+/web/uploads/
+/app/config/parameters.yml
+/app/bootstrap.php.cache
+/app/cache/*
+/app/logs/*
+/app/phpunit.xml
+/app/propel/sql/*
+/app/propel/migrations/*
+/om
+/map
+/bin
+/build
+/vendor
 composer.phar
