improve tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,12 @@
 # use GNU Screen prefix key C-a instead of tmux C-b
 set-option -g prefix C-a
+
+bind-key C-a last-window
+bind | split-window -h
+bind-key h split-window -h
+bind - split-window -v
+bind-key v split-window -v
+
 # UTF-8
 set-option -g status-utf8 on
 set-window-option -g utf8 on
@@ -13,14 +20,14 @@ set-option -g history-limit 1000
 # set-optionsstatus bar
 set-option -g status-bg black
 set-option -g status-fg white
-set-option -g status-interval 30
-set-option -g status-left-length 30
-set-option -g status-left '#[fg=yellow]#S#[default]|#[fg=green]#(whoami)@#H#[default]'
+#set-option -g status-interval 30
+set-option -g status-left-length 20
+set-option -g status-left '#[fg=yellow]#S#[default]|#[fg=green]#(whoami)#[fg=white]@#[fg=cyan]#H#[default]'
 set-option -g status-right-length 80
-set-option -g status-right '#[fg=magenta]#(uptime | cut -f 2 -d "," | cut -f 3 -d " ")u#[default]|#[fg=cyan]#(uptime | cut -f 3-5 -d "," | cut -f 5-7 -d " " | tr -d ",")#[default]|#[fg=blue]%a %d %b %Y %H:%M#[default]'
+set-option -g status-right '#[fg=magenta]#(uptime | cut -d "," -f 2)#[default]|#[fg=yellow]#(uptime | cut -d "," -f 3-)#[default]|#[fg=cyan]%a %d %b %Y %H:%M#[default]'
 
 # Highlight active window
-set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-bg red
 
 # set window notifications
 set-window-option -g monitor-activity on
@@ -36,4 +43,4 @@ set-option -g mouse-select-pane on
 set-window-option -g mode-keys vi
 
 # Default session
-new -d -s "my_session"
+#new -d -s "my_session"
