update zsh and tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ bind-key h split-window -h
 bind - split-window -v
 bind-key v split-window -v
 
+# default shell
+set-option -g default-shell /bin/zsh
+
 # UTF-8
 set-option -g status-utf8 on
 set-window-option -g utf8 on
